# winprocrastinase

./: CMakeLists.txt  README  controller.c  controller.cpp  list_windows.c  list_windows.cpp  proc_info.c  proc_info.cpp  proc_info.h  proc_info.hpp  snd.rc  win_utils.cpp  win_utils.hpp
examples/: blacklist.txt  whitelist.txt
